<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/japan_background"
    android:contentDescription="@string/description"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/volume"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/description"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/ic_baseline_volume_up_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/blueBird"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/description"
                app:srcCompat="@drawable/blue_bird" />

            <TextView
                android:id="@+id/birdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bird"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/beeEnemy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/description"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/bee_enemy" />

            <TextView
                android:id="@+id/beeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy1"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/blueHornedEnemy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/description"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/blue_horned_enemy" />

            <TextView
                android:id="@+id/blueHornedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy2"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ufoEnemy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/description"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:srcCompat="@drawable/ufo_enemy" />

            <TextView
                android:id="@+id/ufoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy3"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/description"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:srcCompat="@drawable/coin_icon" />

            <TextView
                android:id="@+id/coinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/gameGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/info"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startGame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_shape"
        android:backgroundTint="#A53131"
        android:text="@string/startGame"
        android:textSize="20sp" />

</LinearLayout>