<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/japan_background"
    tools:context=".Game_Activity">

    <ImageView
        android:id="@+id/coinImage"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin_icon" />

    <TextView
        android:id="@+id/coinCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/zero"
        android:textColor="#F44336"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/coinImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/oneLife"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/twoLives"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/description"
        app:layout_constraintStart_toEndOf="@+id/oneLife"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/threeLives"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/description"
        app:layout_constraintStart_toEndOf="@+id/twoLives"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <TextView
        android:id="@+id/tapToPlay"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        android:gravity="center"
        android:text="@string/tapToPlay"
        android:textColor="#AC3939"
        android:textSize="34sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mainBird"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blue_bird" />

    <ImageView
        android:id="@+id/firstLayer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/description"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin_icon" />

    <ImageView
        android:id="@+id/secondLayer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/description"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLayer"
        app:srcCompat="@drawable/coin_icon" />

    <ImageView
        android:id="@+id/thirdLayer"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/description"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondLayer"
        app:srcCompat="@drawable/blue_horned_enemy" />

    <ImageView
        android:id="@+id/fourthLayer"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/description"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdLayer"
        app:srcCompat="@drawable/ufo_enemy" />

    <ImageView
        android:id="@+id/fifthLayer"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/description"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourthLayer"
        app:srcCompat="@drawable/bee_enemy" />

</androidx.constraintlayout.widget.ConstraintLayout>